<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".InicioUsuario">

    <Button
        android:id="@+id/btnOpciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:onClick="pasarOpciones"
        android:text="@string/button_opciones"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnHacerCuestionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:onClick="pasarCuestionario"
        android:text="@string/button_comenzar"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/btnRevisarListas"
        app:layout_constraintStart_toStartOf="@+id/btnRevisarListas" />

    <Button
        android:id="@+id/btnRevisarListas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="314dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:onClick="pasarRevisar"
        android:text="@string/button_revisar"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="124dp"
        android:text="@string/main_nombre"
        app:layout_constraintBottom_toBottomOf="@+id/btnHacerCuestionario"
        app:layout_constraintEnd_toEndOf="@+id/btnHacerCuestionario"
        app:layout_constraintTop_toTopOf="@+id/btnOpciones"
        app:layout_constraintVertical_bias="0.333" />
</androidx.constraintlayout.widget.ConstraintLayout>